[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/HAS Overworld Starter Pack/SP-Overworld.png" type="Texture" id=1]
[ext_resource path="res://assets/HAS Buildings Pack/CompilationBuilding/Compilation-Building32x32.png" type="Texture" id=2]
[ext_resource path="res://ProceduralMap.gd" type="Script" id=3]
[ext_resource path="res://Value.gd" type="Script" id=4]
[ext_resource path="res://assets/HAS Overworld Starter Pack/SP-Mountains - 16.png" type="Texture" id=5]
[ext_resource path="res://tilemaps/ground.tres" type="TileSet" id=6]
[ext_resource path="res://tilemaps/trees.tres" type="TileSet" id=7]
[ext_resource path="res://assets/HAS Overworld 2.1/Universal/Universal-Buildings-and-walls.png" type="Texture" id=8]
[ext_resource path="res://assets/HAS Overworld 2.1/Universal/Universal-Fields.png" type="Texture" id=9]
[ext_resource path="res://tilemaps/roads.tres" type="TileSet" id=10]
[ext_resource path="res://BuildModeUI.tscn" type="PackedScene" id=12]

[sub_resource type="TileSet" id=1]
0/name = "SP-Mountains - 16.png 0"
0/texture = ExtResource( 5 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 192, 96, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="TileSet" id=2]
0/name = "Compilation-Building32x32.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 160, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "Compilation-Building32x32.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 128, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "Compilation-Building32x32.png 2"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 32, 128, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "Compilation-Building32x32.png 3"
3/texture = ExtResource( 2 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 256, 224 )
3/tile_mode = 2
3/autotile/icon_coordinate = Vector2( 0, 0 )
3/autotile/tile_size = Vector2( 32, 32 )
3/autotile/spacing = 0
3/autotile/occluder_map = [  ]
3/autotile/navpoly_map = [  ]
3/autotile/priority_map = [  ]
3/autotile/z_index_map = [  ]
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "SP-Overworld.png 4"
4/texture = ExtResource( 1 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 64, 96, 16, 16 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "SP-Overworld.png 5"
5/texture = ExtResource( 1 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 80, 96, 16, 16 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "Universal-Buildings-and-walls.png 6"
6/texture = ExtResource( 8 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 48, 64, 144, 16 )
6/tile_mode = 2
6/autotile/icon_coordinate = Vector2( 0, 0 )
6/autotile/tile_size = Vector2( 16, 16 )
6/autotile/spacing = 0
6/autotile/occluder_map = [  ]
6/autotile/navpoly_map = [  ]
6/autotile/priority_map = [  ]
6/autotile/z_index_map = [  ]
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "Universal-Fields.png 7"
7/texture = ExtResource( 9 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 0, 16, 128, 32 )
7/tile_mode = 2
7/autotile/icon_coordinate = Vector2( 0, 0 )
7/autotile/tile_size = Vector2( 16, 16 )
7/autotile/spacing = 0
7/autotile/occluder_map = [  ]
7/autotile/navpoly_map = [  ]
7/autotile/priority_map = [  ]
7/autotile/z_index_map = [  ]
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0

[node name="Proc" type="YSort"]
script = ExtResource( 3 )

[node name="Paths" type="TileMap" parent="."]
tile_set = ExtResource( 6 )
cell_size = Vector2( 8, 8 )
format = 1

[node name="Paths2" type="TileMap" parent="."]
scale = Vector2( 0.5, 0.5 )
tile_set = ExtResource( 6 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="Roads" type="TileMap" parent="."]
tile_set = ExtResource( 10 )
cell_size = Vector2( 8, 8 )
format = 1
tile_data = PoolIntArray( 0, 0, 1, 1, 0, 65539, 65537, 0, 196609, 65538, 0, 2, 65539, 0, 2, 65540, 0, 3, 196620, 0, 2, 4849619, 0, 65536, 4915155, 0, 131072, 4980691, 0, 131072, 5046227, 0, 131072, 5111763, 0, 131072, 5177299, 0, 196609, 5177300, 0, 2, 5177301, 0, 2, 5177302, 0, 2, 5177303, 0, 2, 5177304, 0, 2, 5177305, 0, 2, 5177306, 0, 2, 5177307, 0, 2, 5177308, 0, 2, 5177309, 0, 2, 5177310, 0, 65539, 5242846, 0, 131072, 5308382, 0, 131072, 5373906, 0, 1, 5373907, 0, 2, 5373908, 0, 2, 5373909, 0, 2, 5373910, 0, 2, 5373911, 0, 2, 5373912, 0, 2, 5373913, 0, 2, 5373914, 0, 2, 5373915, 0, 2, 5373916, 0, 2, 5373917, 0, 2, 5373918, 0, 196611 )

[node name="Roads2" type="TileMap" parent="."]
tile_set = ExtResource( 10 )
cell_size = Vector2( 8, 8 )
format = 1
tile_data = PoolIntArray( 0, 0, 1, 1, 0, 65539, 65537, 0, 196609, 65538, 0, 2, 65539, 0, 2, 65540, 0, 3, 196620, 0, 2, 4849619, 0, 65536, 4915155, 0, 131072, 4980691, 0, 131072, 5046227, 0, 131072, 5111763, 0, 131072, 5177299, 0, 196609, 5177300, 0, 2, 5177301, 0, 2, 5177302, 0, 2, 5177303, 0, 2, 5177304, 0, 2, 5177305, 0, 2, 5177306, 0, 2, 5177307, 0, 2, 5177308, 0, 2, 5177309, 0, 2, 5177310, 0, 65539, 5242846, 0, 131072, 5308382, 0, 131072, 5373906, 0, 1, 5373907, 0, 2, 5373908, 0, 2, 5373909, 0, 2, 5373910, 0, 2, 5373911, 0, 2, 5373912, 0, 2, 5373913, 0, 2, 5373914, 0, 2, 5373915, 0, 2, 5373916, 0, 2, 5373917, 0, 2, 5373918, 0, 196611 )

[node name="Mountains" type="TileMap" parent="."]
tile_set = SubResource( 1 )
format = 1
tile_data = PoolIntArray( 1704041, 0, 0, 9633911, 0, 0, 18219155, 0, 0 )

[node name="Trees" type="TileMap" parent="."]
tile_set = ExtResource( 7 )
cell_size = Vector2( 8, 8 )
cell_y_sort = true
format = 1
tile_data = PoolIntArray( 851994, 0, 0 )

[node name="Buildings" type="TileMap" parent="."]
tile_set = SubResource( 2 )
cell_size = Vector2( 4, 4 )
format = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 1600, 894 )
current = true

[node name="Line2D" type="Line2D" parent="Camera2D"]
visible = false
position = Vector2( -200, -112 )
z_index = 1
points = PoolVector2Array( 408, -7.99999, 408, 232, -7.99998, 232, -7.99998, -7.99999, 412, -7.99999 )
default_color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="ProcDebug" type="GridContainer" parent="Camera2D"]
margin_left = -1556.0
margin_top = -872.0
margin_right = -1168.0
margin_bottom = -660.0
rect_scale = Vector2( 8, 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="Camera2D/ProcDebug"]
margin_right = 129.0
margin_bottom = 163.0

[node name="grass" type="VBoxContainer" parent="Camera2D/ProcDebug/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 31.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Oct" type="HBoxContainer" parent="Camera2D/ProcDebug/TabContainer/grass"]
margin_right = 121.0
margin_bottom = 16.0

[node name="Label" type="Label" parent="Camera2D/ProcDebug/TabContainer/grass/Oct"]
margin_top = 1.0
margin_right = 17.0
margin_bottom = 14.0
rect_min_size = Vector2( 17, 0 )
text = "Oct:"

[node name="octaves" type="HSlider" parent="Camera2D/ProcDebug/TabContainer/grass/Oct" groups=["grassSliders"]]
margin_left = 21.0
margin_right = 85.0
margin_bottom = 16.0
rect_min_size = Vector2( 64, 0 )
max_value = 9.0
value = 1.0
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Camera2D/ProcDebug/TabContainer/grass/Oct"]
margin_left = 89.0
margin_top = 1.0
margin_right = 94.0
margin_bottom = 14.0
text = "3"
script = ExtResource( 4 )

[node name="P" type="HBoxContainer" parent="Camera2D/ProcDebug/TabContainer/grass"]
margin_top = 20.0
margin_right = 121.0
margin_bottom = 36.0

[node name="Label" type="Label" parent="Camera2D/ProcDebug/TabContainer/grass/P"]
margin_top = 1.0
margin_right = 17.0
margin_bottom = 14.0
rect_min_size = Vector2( 17, 0 )
text = "P:"

[node name="period" type="HSlider" parent="Camera2D/ProcDebug/TabContainer/grass/P" groups=["grassSliders"]]
margin_left = 21.0
margin_right = 85.0
margin_bottom = 16.0
rect_min_size = Vector2( 64, 0 )
max_value = 256.0
value = 64.0
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Camera2D/ProcDebug/TabContainer/grass/P"]
margin_left = 89.0
margin_top = 1.0
margin_right = 99.0
margin_bottom = 14.0
text = "64"
script = ExtResource( 4 )

[node name="Cap" type="HBoxContainer" parent="Camera2D/ProcDebug/TabContainer/grass"]
margin_top = 40.0
margin_right = 121.0
margin_bottom = 59.0

[node name="Label" type="Label" parent="Camera2D/ProcDebug/TabContainer/grass/Cap"]
margin_top = 3.0
margin_right = 17.0
margin_bottom = 16.0
text = "Cap:"

[node name="cap" type="HSlider" parent="Camera2D/ProcDebug/TabContainer/grass/Cap" groups=["grassSliders"]]
margin_left = 21.0
margin_right = 85.0
margin_bottom = 16.0
rect_min_size = Vector2( 64, 0 )
min_value = -1.0
max_value = 1.0
step = 0.05
value = 0.5
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="grasscap" type="Button" parent="Camera2D/ProcDebug/TabContainer/grass/Cap"]
margin_left = 89.0
margin_right = 105.0
margin_bottom = 19.0
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Camera2D/ProcDebug/TabContainer/grass/Cap"]
margin_left = 109.0
margin_top = 3.0
margin_right = 121.0
margin_bottom = 16.0
text = "0.5"
script = ExtResource( 4 )

[node name="CheckNoise" type="CheckBox" parent="Camera2D/ProcDebug/TabContainer/grass"]
visible = false
margin_top = 64.0
margin_right = 148.0
margin_bottom = 88.0
pressed = true
text = "Shared Noise"

[node name="GrassButton" type="Button" parent="Camera2D/ProcDebug/TabContainer/grass"]
margin_top = 63.0
margin_right = 121.0
margin_bottom = 82.0
text = "Generate"

[node name="RiverButton2" type="Button" parent="Camera2D/ProcDebug/TabContainer/grass"]
margin_top = 86.0
margin_right = 121.0
margin_bottom = 105.0
text = "Generate River"

[node name="Clear" type="Button" parent="Camera2D/ProcDebug/TabContainer/grass"]
margin_top = 109.0
margin_right = 121.0
margin_bottom = 128.0
text = "Clear"

[node name="mt" type="VBoxContainer" parent="Camera2D/ProcDebug/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 31.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Oct" type="HBoxContainer" parent="Camera2D/ProcDebug/TabContainer/mt"]
margin_right = 148.0
margin_bottom = 16.0

[node name="Label" type="Label" parent="Camera2D/ProcDebug/TabContainer/mt/Oct"]
margin_top = 1.0
margin_right = 27.0
margin_bottom = 15.0
text = "Oct:"

[node name="octaves" type="HSlider" parent="Camera2D/ProcDebug/TabContainer/mt/Oct" groups=["mtSliders"]]
margin_left = 31.0
margin_right = 95.0
margin_bottom = 16.0
rect_min_size = Vector2( 64, 0 )
max_value = 9.0
value = 1.0
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Camera2D/ProcDebug/TabContainer/mt/Oct"]
margin_left = 99.0
margin_top = 1.0
margin_right = 107.0
margin_bottom = 15.0
text = "3"
script = ExtResource( 4 )

[node name="P" type="HBoxContainer" parent="Camera2D/ProcDebug/TabContainer/mt"]
margin_top = 20.0
margin_right = 148.0
margin_bottom = 36.0

[node name="Label" type="Label" parent="Camera2D/ProcDebug/TabContainer/mt/P"]
margin_top = 1.0
margin_right = 27.0
margin_bottom = 15.0
rect_min_size = Vector2( 27, 0 )
text = "P:"

[node name="period" type="HSlider" parent="Camera2D/ProcDebug/TabContainer/mt/P" groups=["mtSliders"]]
margin_left = 31.0
margin_right = 95.0
margin_bottom = 16.0
rect_min_size = Vector2( 64, 0 )
max_value = 128.0
value = 64.0
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Camera2D/ProcDebug/TabContainer/mt/P"]
margin_left = 99.0
margin_top = 1.0
margin_right = 115.0
margin_bottom = 15.0
text = "64"
script = ExtResource( 4 )

[node name="Cap" type="HBoxContainer" parent="Camera2D/ProcDebug/TabContainer/mt"]
margin_top = 40.0
margin_right = 148.0
margin_bottom = 60.0

[node name="Label" type="Label" parent="Camera2D/ProcDebug/TabContainer/mt/Cap"]
margin_top = 3.0
margin_right = 27.0
margin_bottom = 17.0
text = "Cap:"

[node name="cap" type="HSlider" parent="Camera2D/ProcDebug/TabContainer/mt/Cap" groups=["mtSliders"]]
margin_left = 31.0
margin_right = 95.0
margin_bottom = 16.0
rect_min_size = Vector2( 64, 0 )
min_value = -1.0
max_value = 1.0
step = 0.05
value = 0.5
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mtcap" type="Button" parent="Camera2D/ProcDebug/TabContainer/mt/Cap"]
margin_left = 99.0
margin_right = 119.0
margin_bottom = 20.0
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Camera2D/ProcDebug/TabContainer/mt/Cap"]
margin_left = 123.0
margin_top = 3.0
margin_right = 143.0
margin_bottom = 17.0
text = "0.5"
script = ExtResource( 4 )

[node name="CheckNoise" type="CheckBox" parent="Camera2D/ProcDebug/TabContainer/mt"]
visible = false
margin_top = 64.0
margin_right = 148.0
margin_bottom = 88.0
pressed = true
text = "Shared Noise"

[node name="mtButton" type="Button" parent="Camera2D/ProcDebug/TabContainer/mt"]
margin_top = 64.0
margin_right = 148.0
margin_bottom = 84.0
text = "Generate"

[node name="mtClear" type="Button" parent="Camera2D/ProcDebug/TabContainer/mt"]
margin_top = 88.0
margin_right = 148.0
margin_bottom = 108.0
text = "Clear"

[node name="island" type="VBoxContainer" parent="Camera2D/ProcDebug/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 31.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Oct" type="HBoxContainer" parent="Camera2D/ProcDebug/TabContainer/island"]
margin_right = 148.0
margin_bottom = 16.0

[node name="Label" type="Label" parent="Camera2D/ProcDebug/TabContainer/island/Oct"]
margin_top = 1.0
margin_right = 27.0
margin_bottom = 15.0
text = "Oct:"

[node name="octaves" type="HSlider" parent="Camera2D/ProcDebug/TabContainer/island/Oct" groups=["islandSliders"]]
margin_left = 31.0
margin_right = 95.0
margin_bottom = 16.0
rect_min_size = Vector2( 64, 0 )
max_value = 9.0
value = 1.0
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Camera2D/ProcDebug/TabContainer/island/Oct"]
margin_left = 99.0
margin_top = 1.0
margin_right = 107.0
margin_bottom = 15.0
text = "3"
script = ExtResource( 4 )

[node name="P" type="HBoxContainer" parent="Camera2D/ProcDebug/TabContainer/island"]
margin_top = 20.0
margin_right = 148.0
margin_bottom = 36.0

[node name="Label" type="Label" parent="Camera2D/ProcDebug/TabContainer/island/P"]
margin_top = 1.0
margin_right = 27.0
margin_bottom = 15.0
rect_min_size = Vector2( 27, 0 )
text = "P:"

[node name="period" type="HSlider" parent="Camera2D/ProcDebug/TabContainer/island/P" groups=["islandSliders"]]
margin_left = 31.0
margin_right = 95.0
margin_bottom = 16.0
rect_min_size = Vector2( 64, 0 )
max_value = 128.0
value = 64.0
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Camera2D/ProcDebug/TabContainer/island/P"]
margin_left = 99.0
margin_top = 1.0
margin_right = 115.0
margin_bottom = 15.0
text = "64"
script = ExtResource( 4 )

[node name="Cap" type="HBoxContainer" parent="Camera2D/ProcDebug/TabContainer/island"]
margin_top = 40.0
margin_right = 148.0
margin_bottom = 60.0

[node name="Label" type="Label" parent="Camera2D/ProcDebug/TabContainer/island/Cap"]
margin_top = 3.0
margin_right = 27.0
margin_bottom = 17.0
text = "Cap:"

[node name="cap" type="HSlider" parent="Camera2D/ProcDebug/TabContainer/island/Cap" groups=["islandSliders"]]
margin_left = 31.0
margin_right = 95.0
margin_bottom = 16.0
rect_min_size = Vector2( 64, 0 )
min_value = -1.0
max_value = 1.0
step = 0.05
value = 0.5
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="islandcap" type="Button" parent="Camera2D/ProcDebug/TabContainer/island/Cap"]
margin_left = 99.0
margin_right = 119.0
margin_bottom = 20.0
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Camera2D/ProcDebug/TabContainer/island/Cap"]
margin_left = 123.0
margin_top = 3.0
margin_right = 143.0
margin_bottom = 17.0
text = "0.5"
script = ExtResource( 4 )

[node name="CheckNoise" type="CheckBox" parent="Camera2D/ProcDebug/TabContainer/island"]
visible = false
margin_top = 64.0
margin_right = 148.0
margin_bottom = 88.0
pressed = true
text = "Shared Noise"

[node name="IslandButton" type="Button" parent="Camera2D/ProcDebug/TabContainer/island"]
margin_top = 64.0
margin_right = 148.0
margin_bottom = 84.0
text = "Generate"

[node name="IslandClear" type="Button" parent="Camera2D/ProcDebug/TabContainer/island"]
margin_top = 88.0
margin_right = 148.0
margin_bottom = 108.0
text = "Clear"

[node name="tree" type="VBoxContainer" parent="Camera2D/ProcDebug/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 31.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Oct" type="HBoxContainer" parent="Camera2D/ProcDebug/TabContainer/tree"]
margin_right = 148.0
margin_bottom = 16.0

[node name="Label" type="Label" parent="Camera2D/ProcDebug/TabContainer/tree/Oct"]
margin_top = 1.0
margin_right = 27.0
margin_bottom = 15.0
text = "Oct:"

[node name="octaves" type="HSlider" parent="Camera2D/ProcDebug/TabContainer/tree/Oct" groups=["treeSliders"]]
margin_left = 31.0
margin_right = 95.0
margin_bottom = 16.0
rect_min_size = Vector2( 64, 0 )
max_value = 9.0
value = 1.0
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Camera2D/ProcDebug/TabContainer/tree/Oct"]
margin_left = 99.0
margin_top = 1.0
margin_right = 107.0
margin_bottom = 15.0
text = "3"
script = ExtResource( 4 )

[node name="P" type="HBoxContainer" parent="Camera2D/ProcDebug/TabContainer/tree"]
margin_top = 20.0
margin_right = 148.0
margin_bottom = 36.0

[node name="Label" type="Label" parent="Camera2D/ProcDebug/TabContainer/tree/P"]
margin_top = 1.0
margin_right = 27.0
margin_bottom = 15.0
rect_min_size = Vector2( 27, 0 )
text = "P:"

[node name="period" type="HSlider" parent="Camera2D/ProcDebug/TabContainer/tree/P" groups=["islandSliders", "treeSliders"]]
margin_left = 31.0
margin_right = 95.0
margin_bottom = 16.0
rect_min_size = Vector2( 64, 0 )
max_value = 128.0
value = 64.0
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Camera2D/ProcDebug/TabContainer/tree/P"]
margin_left = 99.0
margin_top = 1.0
margin_right = 115.0
margin_bottom = 15.0
text = "64"
script = ExtResource( 4 )

[node name="Cap" type="HBoxContainer" parent="Camera2D/ProcDebug/TabContainer/tree"]
margin_top = 40.0
margin_right = 148.0
margin_bottom = 60.0

[node name="Label" type="Label" parent="Camera2D/ProcDebug/TabContainer/tree/Cap"]
margin_top = 3.0
margin_right = 27.0
margin_bottom = 17.0
text = "Cap:"

[node name="cap" type="HSlider" parent="Camera2D/ProcDebug/TabContainer/tree/Cap" groups=["islandSliders", "treeSliders"]]
margin_left = 31.0
margin_right = 95.0
margin_bottom = 16.0
rect_min_size = Vector2( 64, 0 )
min_value = -1.0
max_value = 1.0
step = 0.05
value = 0.5
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Camera2D/ProcDebug/TabContainer/tree/Cap"]
margin_left = 123.0
margin_top = 3.0
margin_right = 143.0
margin_bottom = 17.0
text = "0.5"
script = ExtResource( 4 )

[node name="CheckNoise" type="CheckBox" parent="Camera2D/ProcDebug/TabContainer/tree"]
visible = false
margin_top = 64.0
margin_right = 148.0
margin_bottom = 88.0
pressed = true
text = "Shared Noise"

[node name="TreeButton" type="Button" parent="Camera2D/ProcDebug/TabContainer/tree"]
margin_top = 64.0
margin_right = 148.0
margin_bottom = 84.0
text = "Generate"

[node name="TreeClear" type="Button" parent="Camera2D/ProcDebug/TabContainer/tree"]
margin_top = 88.0
margin_right = 148.0
margin_bottom = 108.0
text = "Clear"

[node name="Randomize" type="Button" parent="Camera2D/ProcDebug/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 31.0
margin_right = -4.0
margin_bottom = -4.0
text = "New Map"

[node name="pos" type="Label" parent="Camera2D"]
anchor_bottom = 1.0
margin_left = -1568.0
margin_top = 788.0
margin_right = -1496.0
margin_bottom = 802.0
rect_scale = Vector2( 8, 8 )
text = "(0, 0)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="seed" type="Label" parent="Camera2D"]
anchor_bottom = 1.0
margin_left = -192.0
margin_top = 90.0
margin_right = -160.0
margin_bottom = 104.0
text = "big"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildModeUI" parent="Camera2D" instance=ExtResource( 12 )]

[connection signal="pressed" from="Camera2D/ProcDebug/TabContainer/grass/Cap/grasscap" to="." method="_on_grasscap_pressed"]
[connection signal="toggled" from="Camera2D/ProcDebug/TabContainer/grass/CheckNoise" to="." method="_on_CheckBox_toggled"]
[connection signal="pressed" from="Camera2D/ProcDebug/TabContainer/grass/GrassButton" to="." method="_on_GrassButton_pressed"]
[connection signal="pressed" from="Camera2D/ProcDebug/TabContainer/grass/RiverButton2" to="." method="_on_RiverButton2_pressed"]
[connection signal="pressed" from="Camera2D/ProcDebug/TabContainer/grass/Clear" to="." method="_on_Clear_pressed"]
[connection signal="pressed" from="Camera2D/ProcDebug/TabContainer/mt/Cap/mtcap" to="." method="_on_mtcap_pressed"]
[connection signal="pressed" from="Camera2D/ProcDebug/TabContainer/mt/mtButton" to="." method="_on_mtButton_pressed"]
[connection signal="pressed" from="Camera2D/ProcDebug/TabContainer/mt/mtClear" to="." method="_on_mtClear_pressed"]
[connection signal="pressed" from="Camera2D/ProcDebug/TabContainer/island/Cap/islandcap" to="." method="_on_islandcap_pressed"]
[connection signal="toggled" from="Camera2D/ProcDebug/TabContainer/island/CheckNoise" to="." method="_on_CheckBox_toggled"]
[connection signal="pressed" from="Camera2D/ProcDebug/TabContainer/island/IslandButton" to="." method="_on_IslandButton_pressed"]
[connection signal="pressed" from="Camera2D/ProcDebug/TabContainer/island/IslandClear" to="." method="_on_IslandClear_pressed"]
[connection signal="toggled" from="Camera2D/ProcDebug/TabContainer/tree/CheckNoise" to="." method="_on_CheckBox_toggled"]
[connection signal="pressed" from="Camera2D/ProcDebug/TabContainer/tree/TreeButton" to="." method="_on_TreeButton_pressed"]
[connection signal="pressed" from="Camera2D/ProcDebug/TabContainer/tree/TreeClear" to="." method="_on_TreeClear_pressed"]
[connection signal="pressed" from="Camera2D/ProcDebug/TabContainer/Randomize" to="." method="_on_Randomize_pressed"]
